# wanx-video

./: .gitignore  README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml
.claude/: settings.json
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
slotflows/+slotflow#1/: .slotflow.ui.oo.json  slotflow.oo.yaml
subflows/image2video/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/keyframe2video/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/reference2video/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/text2video/: .subflow.ui.oo.json  subflow.oo.yaml
tasks/wanx-i2v-video-api/: index.ts  task.oo.yaml
tasks/wanx-kf2v-video-api/: index.ts  task.oo.yaml
tasks/wanx-r2v-video-api/: index.ts  task.oo.yaml
tasks/wanx-t2v-video-api/: index.ts  task.oo.yaml
