[project]
name = "wanx-video"
version = "0.1.0"
description = ""
authors = [
    {name = "hyrious",email = "hyrious@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
]

[tool.poetry]
package-mode = false
packages = [{include = "wanx_video", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
